kustomize/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: news
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news
  template:
    metadata:
      labels:
        app: news
    spec:
      containers:
      - image: ghcr.io/tuuturu/news:0.0.3
        name: news
